v2/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-v2
spec:
 selector:
  matchLabels:
   app: nginx
 replicas: 3
 template:
  metadata:
   labels:
    app: nginx
    version: "2.0"
  spec:
   containers:
    - name: nginx-v2
      image: nginx:alpine
      resources:
        limits:
          memory: "128Mi"
          cpu: "50m"
      ports:
      - containerPort: 80
      volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: index
   volumes:
   - name: index
     hostPath:
      path: /root/canary/v2
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-service-v2
spec:
 selector:
   app: nginx
   version: "2.0"
 ports:
 - port: 80
   targetPort: 80
 type: ClusterIP
